[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Enemies/sneaky-toast/sneaky-toast-idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Other/ShadowWhite_16x16.png" type="Texture" id=2]
[ext_resource path="res://Enemies/SneakyToast/SneakyToast.gd" type="Script" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Enemies/sneaky-toast/sneaky-toast-walk.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/sneaky-toast/sneaky-toast-hidden.png" type="Texture" id=8]
[ext_resource path="res://Assets/Emotions/bubble emotes july update.png" type="Texture" id=9]
[ext_resource path="res://Overlap/Hitboxes/Hitbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://SFX/HitSound.tscn" type="PackedScene" id=11]
[ext_resource path="res://SFX/InsectDeathSFX.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "hidden"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 3, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 4.47214

[sub_resource type="CircleShape2D" id=6]
radius = 224.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 8 )

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[node name="SneakyToast" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
offset = Vector2( 0, -8 )
hframes = 10

[node name="Shadow" type="Sprite" parent="Sprite"]
modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
position = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hide"
anims/hidden = SubResource( 1 )
anims/hide = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 1, 1, 1, 0.219608 )
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 6 )]

[node name="Emotion" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -28 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 144, 96, 16, 16 )

[node name="Hitbox" parent="." instance=ExtResource( 10 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 8 )

[node name="HitSound" parent="." instance=ExtResource( 11 )]

[node name="InsectDeathSFX" parent="." instance=ExtResource( 12 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="PlayerDetectionZone"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
